Support for JDK 9 release
Changes to support prod release of Java 9 and additional examples for
automatic and unnamed modules as well as split packages example.